@startuml

title __MYMOON's Class Diagram__\n

  namespace com.mad.mymoon {
    class com.mad.mymoon.AugmentedEarth {
        ~ click : boolean
        ~ popUp : PopupWindow
        {static} - MIN_OPENGL_VERSION : double
        {static} - TAG : String
        - currentAnchor : Anchor
        - renderable : ModelRenderable
        - transformationSystem : TransformationSystem
        + checkIsSupportedDeviceOrFinish()
        # onCreate()
        - buildModel()
    }
  }
  

  namespace com.mad.mymoon {
    class com.mad.mymoon.AugmentedMoon {
        ~ click : boolean
        ~ popUp : PopupWindow
        {static} - MIN_OPENGL_VERSION : double
        {static} - TAG : String
        - currentAnchor : Anchor
        - renderable : ModelRenderable
        - transformationSystem : TransformationSystem
        + checkIsSupportedDeviceOrFinish()
        # onCreate()
        - buildModel()
    }
  }
  

  namespace com.mad.mymoon {
    class com.mad.mymoon.AugmentedPortal {
        ~ click : boolean
        ~ popUp : PopupWindow
        {static} - MIN_OPENGL_VERSION : double
        {static} - TAG : String
        - currentAnchor : Anchor
        - renderable : ModelRenderable
        - transformationSystem : TransformationSystem
        + checkIsSupportedDeviceOrFinish()
        # onCreate()
        - buildModel()
    }
  }
  

  namespace com.mad.mymoon {
    class com.mad.mymoon.Dashboard {
        # onCreate()
    }
  }
  

  namespace com.mad.mymoon {
    class com.mad.mymoon.DatePickerFragment {
        + onCreateDialog()
        + onDateSet()
        - populateSetDate()
    }
  }
  

  namespace com.mad.mymoon {
    class com.mad.mymoon.MainActivity {
        ~ bottomAnim : Animation
        ~ image : ImageView
        ~ logo : TextView
        ~ slogan : TextView
        ~ topAnim : Animation
        {static} - splash_screen : int
        # onCreate()
    }
  }
  

  com.mad.mymoon.AugmentedEarth -up-|> androidx.appcompat.app.AppCompatActivity
  com.mad.mymoon.AugmentedMoon -up-|> androidx.appcompat.app.AppCompatActivity
  com.mad.mymoon.AugmentedPortal -up-|> androidx.appcompat.app.AppCompatActivity
  com.mad.mymoon.Dashboard -up-|> androidx.appcompat.app.AppCompatActivity
  com.mad.mymoon.DatePickerFragment .up.|> android.app.DatePickerDialog.OnDateSetListener
  com.mad.mymoon.DatePickerFragment -up-|> androidx.fragment.app.DialogFragment
  com.mad.mymoon.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
